<resources>
    <string name="app_name">Technical Summary</string>
    <string name="action_settings">Settings</string>
    <string name="action_update">Update</string>
     <string name="about">The application represents technical analysis data gathered from open instruments of investing.com. \n
        GreyOG/Fusion Media/Investing.com will not accept any liability for loss or damage
        as a result of reliance on the information contained within this tool including data, quotes,
        charts and buy/sell signals.
        Please be fully informed regarding the risks and costs associated with trading the financial markets,
        it is one of the riskiest investment forms possible.
        Currency trading on margin involves high risk, and is not suitable for all investors.
        Before deciding to trade foreign exchange or any other financial instrument
        you should carefully consider your investment objectives, level of experience, and risk appetite.</string>
    <string name="about_title">About/Disclaimer</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="prefs">Preferences</string>
    <string name="donate">Make donation</string>
    <string name="donate_url">https://www.paypal.me/greyog</string>
    <string name="banner_ad_unit_id">ca-app-pub-7481139450301121/3991868493</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-7481139450301121/4167406890</string>
    <string name="checkboxTimerOn">Update automatically</string>
    <string name="checkbox1_summary">Summary of CheckBox 1</string>
    <string name="etTimerInterval_title">Update interval</string>
    <string name="etTimerInterval_summary">Enter update interval in minutes</string>
    <string name="list1_title">List 1</string>
    <string name="list1_summary">Summary of List 1</string>
    <string-array name="forex_filter_entries">
        <item>EUR/USD</item>
        <item>USD/JPY</item>
        <item>GBP/USD</item>
        <item>USD/CHF</item>
        <item>USD/CAD</item>
        <item>EUR/JPY</item>
        <item>AUD/USD</item>
        <item>NZD/USD</item>
        <item>EUR/GBP</item>
        <item>EUR/CHF</item>
        <item>AUD/JPY</item>
        <item>GBP/JPY</item>
        <item>CHF/JPY</item>
        <item>EUR/CAD</item>
        <item>AUD/CAD</item>
        <item>CAD/JPY</item>
        <item>NZD/JPY</item>
        <item>AUD/NZD</item>
        <item>GBP/AUD</item>
        <item>EUR/AUD</item>
        <item>GBP/CHF</item>
        <item>EUR/NZD</item>
        <item>AUD/CHF</item>
        <item>GBP/NZD</item>
        <item>USD/SGD</item>
        <item>USD/HKD</item>
        <item>USD/DKK</item>
        <item>GBP/CAD</item>
        <item>EUR/RUB</item>
        <item>USD/RUB</item>
    </string-array>
    <string-array name="forex_filter_entry_values">
        <item>1</item>
        <item>3</item>
        <item>2</item>
        <item>4</item>
        <item>7</item>
        <item>9</item>
        <item>5</item>
        <item>8</item>
        <item>6</item>
        <item>10</item>
        <item>49</item>
        <item>11</item>
        <item>13</item>
        <item>16</item>
        <item>47</item>
        <item>51</item>
        <item>58</item>
        <item>50</item>
        <item>53</item>
        <item>15</item>
        <item>12</item>
        <item>52</item>
        <item>48</item>
        <item>55</item>
        <item>42</item>
        <item>155</item>
        <item>43</item>
        <item>54</item>
        <item>1691</item>
        <item>2186</item>
    </string-array>
    <string-array name="commodities_filter_entries">
        <item>Gold</item>
        <item>US Soybean Oil</item>
        <item>US Soybeans</item>
        <item>US Wheat</item>
        <item>US Corn</item>
        <item>US Soybean Meal</item>
        <item>Heating Oil</item>
        <item>Rough Rice</item>
        <item>Aluminum</item>
        <item>Gasoline RBOB</item>
        <item>Zinc</item>
        <item>Lumber</item>
        <item>Oats</item>
        <item>Lead</item>
        <item>Nickel</item>
        <item>Tin</item>
        <item>Copper</item>
        <item>Live Cattle</item>
        <item>Lean Hogs</item>
        <item>London Wheat</item>
        <item>Copper</item>
        <item>US Coffee C</item>
        <item>Brent Oil</item>
        <item>London Sugar</item>
        <item>Silver</item>
        <item>Crude Oil</item>
        <item>US Cotton #2</item>
        <item>London Cocoa</item>
        <item>London Gas Oil</item>
        <item>Natural Gas</item>
        <item>US Sugar #11</item>
        <item>Palladium</item>
        <item>Orange Juice</item>
        <item>US Cocoa</item>
        <item>Platinum</item>
        <item>London Robusta Coffee</item>
        <item>Feeder Cattle</item>
    </string-array>
    <string-array name="commodities_filter_entry_values">
        <item>8830</item>
        <item>8915</item>
        <item>8916</item>
        <item>8917</item>
        <item>8918</item>
        <item>8919</item>
        <item>8988</item>
        <item>13916</item>
        <item>49768</item>
        <item>954867</item>
        <item>956470</item>
        <item>959198</item>
        <item>959199</item>
        <item>959207</item>
        <item>959208</item>
        <item>959209</item>
        <item>959211</item>
        <item>8914</item>
        <item>8913</item>
        <item>8912</item>
        <item>8831</item>
        <item>8832</item>
        <item>8833</item>
        <item>8834</item>
        <item>8836</item>
        <item>8849</item>
        <item>8851</item>
        <item>8860</item>
        <item>8861</item>
        <item>8862</item>
        <item>8869</item>
        <item>8883</item>
        <item>8891</item>
        <item>8894</item>
        <item>8910</item>
        <item>8911</item>
        <item>961618</item>
    </string-array>
    <string-array name="indices_filter_entries">
        <item>S&amp;P 500</item>
        <item>FTSE 100</item>
        <item>Euro Stoxx 50</item>
        <item>DAX</item>
        <item>SMI</item>
        <item>FTSE MIB</item>
        <item>AEX</item>
        <item>CAC 40</item>
        <item>PSI 20</item>
        <item>IBEX 35</item>
        <item>OMX Stockholm 30 CFD</item>
        <item>SmallCap 2000</item>
        <item>BEL 20</item>
        <item>S&amp;P/ASX 200</item>
        <item>Nikkei 225</item>
        <item>Hang Seng</item>
        <item>Tadawul</item>
        <item>Athens General</item>
    </string-array>
    <string-array name="indices_filter_entry_values">
        <item>166</item>
        <item>27</item>
        <item>175</item>
        <item>172</item>
        <item>176</item>
        <item>177</item>
        <item>168</item>
        <item>167</item>
        <item>14600</item>
        <item>174</item>
        <item>954864</item>
        <item>170</item>
        <item>14601</item>
        <item>53094</item>
        <item>40830</item>
        <item>179</item>
        <item>959210</item>
        <item>44399</item>
    </string-array>
    <string name="donate_summary">Donate to developer</string>
    <string name="forex_filter_summary">Choose Forex tab contents</string>
    <string name="forex_filter_title">Forex tab content</string>
</resources>