<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="false"
        android:key="swTimerOn"
        android:title="@string/checkboxTimerOn"></SwitchPreference>

    <EditTextPreference
        android:defaultValue="5"
        android:dependency="swTimerOn"
        android:key="edTimerInterval"
        android:numeric="decimal"
        android:summary="@string/etTimerInterval_summary"
        android:title="@string/etTimerInterval_title"></EditTextPreference>
    <PreferenceScreen
        android:summary="@string/donate_summary"
        android:title="@string/donate">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/donate_url"></intent>
    </PreferenceScreen>
    <MultiSelectListPreference
        android:entries="@array/forex_filter_entries"
        android:entryValues="@array/forex_filter_entry_values"
        android:key="forexFilter"
        android:summary="@string/forex_filter_summary"
        android:title="@string/forex_filter_title"></MultiSelectListPreference>
</PreferenceScreen>