<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.greyogproducts.greyog.fts.MainActivity">
    <item
        android:id="@+id/action_about"
        android:onClick="doActionAbout"
        android:orderInCategory="100"
        android:title="@string/about_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_donate"
        android:onClick="doActionDonate"
        android:orderInCategory="101"
        android:title="@string/donate"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_prefs"
        android:onClick="doActionPrefs"
        android:orderInCategory="50"
        android:title="@string/prefs"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_update"
        android:icon="@drawable/ic_action_update"
        android:onClick="doActionUpdate"
        android:orderInCategory="10"
        android:title="@string/action_update"
        app:showAsAction="ifRoom" />

</menu>
